// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar > should work as expected 1`] = `
<DocumentFragment>
  <div
    data-testid="avatar-container"
    style="display: inline-block;"
  >
    <div
      class="mocked-styled-0"
      data-size="2xl"
      data-testid="avatar-initial"
    >
      dm
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should work as expected 2`] = `
<DocumentFragment>
  <div
    data-testid="avatar-container"
    style="display: inline-block;"
  >
    <img
      class="mocked-styled-1"
      data-size="2xl"
      data-testid="avatar-picture"
      src="https://placecats.com/neo_2/300/200"
    />
  </div>
</DocumentFragment>
`;
